# iced-builder

./: .gitignore  .nvchecker.toml  Cargo.toml  PKGBUILD  TODO.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  lint.yml  test.yml
assets/linux/: dev.pml68.iced-builder.desktop
assets/themes/: dark.toml  light.toml  rose_pine.toml
assets/windows/: iced_builder.rc
crates/iced_drop/: Cargo.toml  README.md
crates/iced_drop/src/widget/: droppable.rs
crates/iced_fontello/: Cargo.toml  README.md  fonts.json
crates/iced_fontello/src/: lib.rs
crates/material_theme/: Cargo.toml
crates/material_theme/src/: button.rs  checkbox.rs  dialog.rs  image.rs  lib.rs  menu.rs  pane_grid.rs  pick_list.rs  progress_bar.rs  qr_code.rs  radio.rs  rule.rs  scrollable.rs  slider.rs  text.rs  text_editor.rs  text_input.rs  toggler.rs  utils.rs
fonts/: icons.toml
iced_builder/: Cargo.toml  build.rs  rustfmt.toml
iced_builder/assets/: config.toml
iced_builder/assets/themes/: Rose Pine.toml
iced_builder/fonts/: icons.toml
iced_builder/src/: config.rs  dialogs.rs  environment.rs  error.rs  icon.rs  lib.rs  main.rs  panes.rs  theme.rs  widget.rs
iced_builder/src/codegen/: mod.rs
iced_builder/src/panes/: code_view.rs  designer_view.rs  element_list.rs
iced_builder/src/types/: element_name.rs  mod.rs  project.rs  rendered_element.rs
iced_builder/src/types/project/: mod.rs
iced_builder/src/views/: code_view.rs  designer_view.rs  element_list.rs  style.rs
iced_drop/: Cargo.toml  README.md
iced_drop/src/widget/: droppable.rs
iced_fontello/: .gitignore  Cargo.toml
material_theme/: Cargo.toml
material_theme/assets/themes/: dark.toml  light.toml
material_theme/src/: button.rs  container.rs  dialog.rs  lib.rs  menu.rs  pick_list.rs  scrollable.rs  utils.rs
src/: appearance.rs  config.rs  dialog.rs  dialogs.rs  environment.rs  error.rs  icon.rs  main.rs  options.rs  theme.rs  types.rs  values.rs  widget.rs
src/codegen/: mod.rs
src/panes/: code_view.rs  designer_view.rs  element_list.rs  style.rs
src/theme/: button.rs  text.rs
src/types/: element_name.rs  mod.rs  project.rs  props.rs  rendered_element.rs
src/values/: alignment.rs  content_fit.rs  length.rs  line_height.rs  padding.rs  pixels.rs  rotation.rs
src/widget/: button.rs
theme_test/: Cargo.toml
theme_test/src/: main.rs
