[package]
name = "iced_builder"
description = "UI builder for iced, built with iced."
version = "0.1.0"
edition = "2024"
authors = ["pml68 <contact@pml68.dev>"]
repository = "https://github.com/pml68/iced-builder"
license = "GPL-3.0-or-later"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
rust-version = "1.85.0"

[dependencies]
iced.workspace = true
iced_anim.workspace = true
iced_custom_highlighter = { git = "https://github.com/pml68/iced_custom_highlighter", branch = "master" }
iced_drop = { git = "https://github.com/pml68/iced_drop", branch = "iced/personal" }
iced_dialog.workspace = true
material_theme = { path = "crates/material_theme", features = ["animate", "serde", "dialog", "svg"] }
serde.workspace = true
serde_json = "1.0.140"
toml.workspace = true
tokio = { version = "1.45.1", features = ["fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["fs"] }
# TODO: enable tokio when it doesn't crash anymore
# rfd = { version = "0.15.2", default-features = false, features = ["tokio", "xdg-portal"]  }
rfd = "0.15.3"
rust-format = "0.3.4"
fxhash = "0.2.1"
thiserror = "2.0.12"
dirs-next = "2.0.0"

[workspace.dependencies]
iced_widget = "0.14.0-dev"
iced_anim = { version = "0.2.1", features = ["derive"] }
iced_dialog = { git = "https://github.com/pml68/iced_dialog", branch = "iced/personal" }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"

[workspace.dependencies.iced]
version = "0.14.0-dev"
default-features = false
features = ["wgpu", "tiny-skia", "web-colors", "advanced", "tokio", "image", "svg", "lazy"]

[build-dependencies]
iced_fontello = { path = "crates/iced_fontello" }

[target.'cfg(target_os = "macos")'.dependencies]
xdg = "3.0.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"
windows_exe_info = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"

[[bin]]
name = "iced-builder"
path = "src/main.rs"

[workspace]
members = ["crates/*"]
default-members = [".", "crates/material_theme"]

[lints.rust]
missing_debug_implementations = "deny"
unsafe_code = "deny"
unused_results = "deny"

[lints.clippy]
type-complexity = "allow"
uninlined_format_args = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"
clone_on_copy = "deny"

[patch.crates-io]
iced = { git = "https://github.com/pml68/iced", branch = "feat/rehighlight-on-redraw" }
iced_anim = { git = "https://github.com/pml68/iced_anim" }
iced_widget = { git = "https://github.com/pml68/iced", branch = "feat/rehighlight-on-redraw" }
