[package]
name = "iced_builder"
description = "UI builder for iced, built with iced."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
iced.workspace = true
iced.features = [
  "wgpu",
  "tiny-skia",
  "web-colors",
  "advanced",
  "tokio",
  "image",
  "svg",
  "lazy",
]

iced_anim.workspace = true
iced_dialog.workspace = true
iced_drop.workspace = true
iced_material.workspace = true
iced_custom_highlighter.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
rfd.workspace = true
rust-format.workspace = true
fxhash.workspace = true
thiserror.workspace = true
dirs-next.workspace = true

[build-dependencies]
iced_fontello = { path = "iced_fontello" }

[target.'cfg(target_os = "macos")'.dependencies]
xdg = "3.0.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.5"
windows_exe_info = "0.5.2"

[lints]
workspace = true

[[bin]]
name = "iced-builder"
path = "src/main.rs"

[workspace]
members = ["iced_fontello"]
default-members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["pml68 <contact@pml68.dev>"]
repository = "https://github.com/pml68/iced-builder"
license = "GPL-3.0-or-later"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
rust-version = "1.88.0"

[workspace.dependencies]
iced.version = "0.14.0-dev"
iced.default-features = false

iced_widget = "0.14.0-dev"

iced_material.git = "https://github.com/pml68/iced_material"
iced_material.branch = "iced/personal"
iced_material.features = ["animate", "serde", "dialog", "svg"]

iced_anim.git = "https://github.com/pml68/iced_anim"
iced_anim.features = ["derive"]

iced_dialog.git = "https://github.com/pml68/iced_dialog"
iced_dialog.branch = "iced/personal"

iced_drop.git = "https://github.com/pml68/iced_drop"
iced_drop.branch = "iced/personal"

iced_custom_highlighter.git = "https://github.com/pml68/iced_custom_highlighter"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.2"
tokio = { version = "1.46.1", features = ["fs", "io-util"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
rfd = "0.15.4"
rust-format = "0.3.4"
fxhash = "0.2.1"
thiserror = "2.0.12"
dirs-next = "2.0.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"

[workspace.lints.rust]
missing_debug_implementations = "deny"
unsafe_code = "deny"
unused_results = "deny"

[workspace.lints.clippy]
type-complexity = "allow"
uninlined_format_args = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"
clone_on_copy = "deny"

[patch.crates-io]
iced_core = { git = "https://github.com/pml68/iced", branch = "feat/rehighlight-on-redraw" }
iced_widget = { git = "https://github.com/pml68/iced", branch = "feat/rehighlight-on-redraw" }
iced = { git = "https://github.com/pml68/iced", branch = "feat/rehighlight-on-redraw" }
