[package]
name = "iced_builder"
description = "GUI builder for iced, built with iced."
version = "0.1.0"
edition = "2021"
authors = ["pml68 <contact@pml68.me>"]
repository = "https://github.com/pml68/iced-builder"
license = "GPL-3.0-or-later"
keywords = ["gui", "iced"]

[dependencies]
iced = { version = "0.13.1", features = [ "image","svg","canvas","qr_code","advanced","tokio","highlighter"] }
iced_aw = { version = "0.11.0", default-features = false, features = ["menu","color_picker"] }
iced_anim = { git = "https://github.com/pml68/iced_anim", branch = "main", features = ["derive", "serde"] }
iced_drop = { path = "../iced_drop" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["fs"] }
rfd = { version = "0.15.1", default-features = false, features = ["async-std", "gtk3"]  }
rust-format = "0.3.4"
unique_id = "0.1.5"
indexmap = { version = "2.7.0", features = ["serde"] }
thiserror = "2.0.5"

[build-dependencies]
iced_fontello = "0.13.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.1"
windows_exe_info = "0.4"

[[bin]]
name = "iced-builder"
path = "src/main.rs"
